# ConanPackages

./: .gitignore  LICENSE  README.md
aliyun_oss/: CMakeLists.txt  conanfile.py
aliyun_oss/test_package/: CMakeLists.txt  conanfile.py
tim_sdk/: conanfile.py
tim_sdk/src/: CMakeLists.txt
tim_sdk/src/ImSDKForMac_CPP.framework/Versions/A/Headers/: V2TIMMessage.h
tim_sdk/src/ImSDKForMac_CPP.framework/Versions/Current/Headers/: V2TIMErrorCode.h  V2TIMMessageManager.h
tim_sdk/test_package/: CMakeLists.txt  conanfile.py  example.cpp
